Package: R.rsp
==============

Version: 0.8.5 [2013-01-20]
o Added compileKnitr() and corresponding system tests.
o Added 'knitr' under suggested packages.


Version: 0.8.4 [2012-12-19]
o Utilizing new startupMessage() of R.oo.


Version: 0.8.3 [2012-12-06]
o ROBUSTNESS: Added system tests for compileLaTeX(), compileSweave()
  and rsp().
o Added argument 'outPath' to compileLaTeX(), compileSweave() and rsp(),
  which is also the working directory.
o BUG FIX: compileLaTeX() and compileSweave() would return an incorrect
  pathname unless the source file was in the working directory.


Version: 0.8.2 [2012-06-22]
o ROBUSTNESS: Now the doc/Makefile no longer assumes 'R' is on 
  the system's search path.  Instead it uses $(R_HOME)/bin/R. 
  Thanks to Kasper Hansen at John Hopkins for the suggestion.


Version: 0.8.1 [2012-06-16]
o Now package only imports R.methodsS3 and R.oo instead of
  "depends" on them.


Version: 0.8.0 [2012-05-02]
o Now the package depends on R.devices, which contains the utility
  functions for graphical devices that originate from R.utils.


Version: 0.7.5 [2012-03-20]
o Now inst/doc/templates/Makefile does a better job cleaning up.


Version: 0.7.4 [2012-03-06]
o CRAN POLICY: Removed all internal copies of 'base' functions
  that contain .Internal().


Version: 0.7.3 [2012-02-28]
o Added toLatex() for LaTeX escaping character strings, cf.
  utils::toLatex() for 'sessionInfo' objects.


Version: 0.7.2 [2012-01-21]
o Placed a copy of inst/doc/Makefile in inst/doc/templates/ and
  updated the 'Include static PDFs and non-Sweave vignettes in 
  an R package' vignette accordingly.  The reason for this change
  is that inst/doc/Makefile will not be installed in recent
  version of R.  The Makefile also does a better job cleaning up.


Version: 0.7.1 [2011-11-28]
o Now R.rsp::rsp() can be called without the package had been
  loaded before.


Version: 0.7.0 [2011-11-23]
o DOCUMENTATION: Added a vignette explaining how to include static